# MacStat

./: .gitignore  AppIcon.icns  CMakeLists.txt  README.md
include/: mainwindow.h
include/system_stats/: cpu_stats.h  memory_stats.h
resources/: Info.plist  create_icns.sh
src/: main.cpp  mainwindow.cpp
src/system_stats/: cpu_stats.cpp  memory_stats.cpp
